typo in production.json erb

--- a/chef/cookbooks/bigtent/templates/default/opt/bigtent/config/production.json.erb
+++ b/chef/cookbooks/bigtent/templates/default/opt/bigtent/config/production.json.erb
@@ -9,7 +9,7 @@
     "duration": 86400000
   },
   "env": "production",
-  "issuer": "<%= <%= node[:bigtent][:issuer] %> %>",
+  "issuer": "<%= node[:bigtent][:issuer] %>",
   "use_https": false,
   "domain_info": {
     "yahoo.com": {
