adding in nginx, re-organzing daemontools, adding supported_languages

--- a/chef/cookbooks/bigtent/templates/default/opt/bigtent/config/production.json.erb
+++ b/chef/cookbooks/bigtent/templates/default/opt/bigtent/config/production.json.erb
@@ -24,5 +24,6 @@
     "host": "<%= node[:proxy][:host] %>",
     "port": <%= node[:proxy][:port] %>
   },
-  "translation_directory": "/opt/bigtent/static/i18n"
+  "translation_directory": "/opt/bigtent/static/i18n",
+  "supported_languages": ["en-US"]
 }
