--- a/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
@@ -1,7 +1,7 @@
 {
   "env": "production",
-  "public_url": "<%= node[:persona][:webhead][:public_url] %>",
-  "public_static_url": "<%= node[:persona][:webhead][:public_static_url] %>",
+  "public_url": "<%= node[:persona][:public_url] %>",
+  "public_static_url": "<%= node[:persona][:public_static_url] %>",
   "bind_to": {
     "host": "127.0.0.1"
   },
@@ -35,9 +35,9 @@
   "static": { "bind_to": { "port": 63400 } },
 
   "static_url": "http://127.0.0.1:63400",
-  "verifier_url": "<%= node[:persona][:webhead][:verifier_url] %>",
-  "keysigner_url": "<%= node[:persona][:webhead][:keysigner_url] %>",
-  "dbwriter_url": "<%= node[:persona][:webhead][:dbwriter_url] %>",
+  "verifier_url": "<%= node[:persona][:verifier_url] %>",
+  "keysigner_url": "<%= node[:persona][:keysigner_url] %>",
+  "dbwriter_url": "<%= node[:persona][:dbwriter_url] %>",
   "browserid_url": "http://127.0.0.1:62700",
   "proxy_idps": <%= JSON.generate(node[:persona][:webhead][:proxy_idps]) %>,
   "kpi_backend_sample_rate": <%= node[:persona][:webhead][:kpi_backend_sample_rate] %>,
