--- a/chef/cookbooks/persona-dbwrite/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-dbwrite/templates/default/opt/browserid/config/production.json.erb
@@ -6,11 +6,6 @@
     "host": "127.0.0.1"
   },
   "use_minified_resources": true,
-  "database": {
-    "driver": "mysql",
-    "name": "browserid",
-    "create_schema": false
-  },
   "smtp": {
     "host": "127.0.0.1"
   },
@@ -47,6 +42,9 @@
   "database": {
     "host": "<%= node[:persona][:dbwrite][:database][:host] %>",
     "user": "<%= node[:persona][:dbwrite][:database][:user] %>",
-    "password": "<%= node[:persona][:dbwrite][:database][:password] %>"
+    "password": "<%= node[:persona][:dbwrite][:database][:password] %>",
+    "driver": "mysql",
+    "name": "browserid",
+    "create_schema": false
   }
 }
