improving what we get if no proxy is defined. noticed this in relation to issue #23

--- a/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
@@ -45,11 +45,12 @@
     "name": "browserid",
     "create_schema": false
   },
-
+  <% if node[:proxy][:host] %>
   "http_proxy": {
     "host": "<%= node[:proxy][:host] %>",
     "port": 8888
   }
+  <% end %>
 }
 
 
