--- a/chef/cookbooks/persona-keysign/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-keysign/templates/default/opt/browserid/config/production.json.erb
@@ -34,11 +34,12 @@
   "keysigner_url": "<%= node[:persona][:keysigner_url] %>",
   "dbwriter_url": "<%= node[:persona][:dbwriter_url] %>",
   "browserid_url": "http://127.0.0.1:62700",
-
+  <% if node[:proxy][:host] %>
   "http_proxy": {
     "host": "<%= node[:proxy][:host] %>",
     "port": 8888
   }
+  <% end %>
 }
 
 
