--- a/chef/cookbooks/persona-webhead/templates/default/sv-browserid-generic-run.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/sv-browserid-generic-run.erb
@@ -8,7 +8,7 @@ export NODE_ENV=production
 export CONFIG_FILES="/opt/browserid/config/l10n-prod.json,"
 <% end %>
 export CONFIG_FILES="${CONFIG_FILES}/opt/browserid/config/production.json"
-<% if node[:persona][:loadtest] and @variables[:svc] == "webhead" %>
+<% if node[:persona][:loadtest] and ["webhead", "router"].include? @variables[:svc] %>
 export BROWSERID_FAKE_VERIFICATION=1
 <% end %>
 
