--- a/chef/cookbooks/persona-webhead/templates/default/etc/nginx/conf.d/redirect.conf.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/etc/nginx/conf.d/redirect.conf.erb
@@ -1,4 +1,6 @@
+# https://github.com/fmarier/checkurl/blob/no_security_improvements/check-persona-url.py
 
+# HTTP
 server {
     # HTTP <%= @site_name %>
     listen   8000 default;
@@ -8,37 +10,159 @@ server {
 
     # redirect
     # http://wiki.nginx.org/IfIsEvil
-    if ($request_method ~ GET|HEAD ) {
-        rewrite        ^ https://<%= @site_name %>$request_uri? permanent;
-    }
-
     if ($request_method !~ GET|HEAD ) {
         return 400 "{\"error\": \"Please use HTTPS rather than HTTP\"}";
     }
+    rewrite        ^(.*)$ https://<%= @site_name %>$1 permanent;
 }
 
 
 server {
     # HTTP verifier.<%= @site_name %>
-    listen   8000 default;
+    listen   8000;
     server_name verifier.<%= @site_name %>;
     # Set STS Header
     add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
 
     # redirect
     # http://wiki.nginx.org/IfIsEvil
-    if ($request_method ~ GET|HEAD ) {
-        rewrite        ^ https://<%= @site_name %>/ permanent;
-    }
-
     if ($request_method !~ GET|HEAD ) {
         return 400 "{\"error\": \"Please use HTTPS rather than HTTP\"}";
     }
+    rewrite        ^ https://<%= @site_name %>/ permanent;
 }
 
 server {
     # HTTP static.<%= @site_name %>
-    listen   8000 default;
+    listen   8000;
+    server_name static.<%= @site_name %>;
+    # Set STS Header
+    add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
+
+    # redirect
+    # http://wiki.nginx.org/IfIsEvil
+    if ($request_method !~ GET|HEAD ) {
+        return 400 "{\"error\": \"Please use HTTPS rather than HTTP\"}";
+    }
+    rewrite        ^/$ https://<%= @site_name %>/ permanent;
+    rewrite        ^/include\.js$ https://<%= @site_name %>/include.js permanent;
+    rewrite        ^/include\.orig\.js$ https://<%= @site_name %>/include.orig.js permanent;
+    rewrite        ^/provisioning_api\.js$ https://<%= @site_name %>/provisioning_api.js permanent;
+}
+
+server {
+    # HTTP browserid.org www.browserid.org
+    listen   8000;
+    server_name browserid.org www.browserid.org;
+    # Set STS Header
+    add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
+
+    # redirect
+    # http://wiki.nginx.org/IfIsEvil
+    if ($request_method !~ GET|HEAD ) {
+        return 400 "{\"error\": \"Please use HTTPS rather than HTTP\"}";
+    }
+    rewrite        ^ https://login.persona.org$request_uri? permanent;
+}
+
+server {
+    # HTTP diresworb.org www.diresworb.org
+    listen   8000;
+    server_name diresworb.org www.diresworb.org;
+    # Set STS Header
+    add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
+
+    # redirect
+    # http://wiki.nginx.org/IfIsEvil
+    if ($request_method !~ GET|HEAD ) {
+        return 400 "{\"error\": \"Please use HTTPS rather than HTTP\"}";
+    }
+    rewrite        ^(.*)$ https://login.anosrep.org$1 permanent;
+}
+
+server {
+    # HTTP <%= @base_site_name %> www.<%= @base_site_name %>
+    listen   8000;
+    server_name <%= @base_site_name %> www.<%= @base_site_name %>;
+    # Set STS Header
+    add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
+
+    # redirect
+    # http://wiki.nginx.org/IfIsEvil
+    if ($request_method !~ GET|HEAD ) {
+        return 400 "{\"error\": \"Please use HTTPS rather than HTTP\"}";
+    }
+    rewrite        ^/$ https://login.<%= @base_site_name %>/ permanent;
+}
+
+# HTTPS
+
+server {
+    # HTTPS diresworb.org www.diresworb.org
+    listen   80;
+    server_name diresworb.org www.diresworb.org;
+    # Set STS Header
+    add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
+
+    # redirect
+    # http://wiki.nginx.org/IfIsEvil
+    if ($request_method ~ GET|HEAD ) {
+        rewrite        ^(.*)$ https://<%= @site_name %>$1 permanent;
+    }
+
+    location /verify/code_update {
+        allow 127.0.0.0/8;
+        deny all;
+    }
+    
+    # verifier
+    location = /verify {
+        proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
+        proxy_pass http://127.0.0.1:62800;
+    }
+    location = /verify/__heartbeat__ {
+        rewrite /verify/__heartbeat__ /__heartbeat__ break;
+        proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
+        proxy_pass http://127.0.0.1:62800;
+    }  
+}
+
+server {
+    # HTTPS <%= @base_site_name %> www.<%= @base_site_name %> verifier.<%= @site_name %>
+    listen   80;
+    server_name <%= @base_site_name %> www.<%= @base_site_name %> verifier.<%= @site_name %>;
+    # Set STS Header
+    add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
+
+    # redirect
+    # http://wiki.nginx.org/IfIsEvil
+    if ($request_method ~ GET|HEAD ) {
+        rewrite        ^/$ https://<%= @site_name %>/ permanent;
+        rewrite        ^/include\.js$ https://<%= @site_name %>/include.js permanent;
+        rewrite        ^/include\.orig\.js$ https://<%= @site_name %>/include.orig.js permanent;
+        rewrite        ^/provisioning_api\.js$ https://<%= @site_name %>/provisioning_api.js permanent;
+    }
+
+    location /verify/code_update {
+        allow 127.0.0.0/8;
+        deny all;
+    }
+    
+    # verifier
+    location = /verify {
+        proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
+        proxy_pass http://127.0.0.1:62800;
+    }
+    location = /verify/__heartbeat__ {
+        rewrite /verify/__heartbeat__ /__heartbeat__ break;
+        proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
+        proxy_pass http://127.0.0.1:62800;
+    }  
+}
+
+server {
+    # HTTPS static.<%= @site_name %>
+    listen   80;
     server_name static.<%= @site_name %>;
     # Set STS Header
     add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
@@ -46,82 +170,40 @@ server {
     # redirect
     # http://wiki.nginx.org/IfIsEvil
     if ($request_method ~ GET|HEAD ) {
-        rewrite        ^ https://<%= @site_name %>/ permanent;
+        rewrite        ^/$ https://<%= @site_name %>/ permanent;
+        rewrite        ^/include\.js$ https://<%= @site_name %>/include.js permanent;
+        rewrite        ^/include\.orig\.js$ https://<%= @site_name %>/include.orig.js permanent;
+        rewrite        ^/provisioning_api\.js$ https://<%= @site_name %>/provisioning_api.js permanent;
     }
 
-    if ($request_method !~ GET|HEAD ) {
-        return 400 "{\"error\": \"Please use HTTPS rather than HTTP\"}";
+    location /verify/code_update {
+        allow 127.0.0.0/8;
+        deny all;
     }
-}
-
-server {
-    # HTTP browserid.org www.browserid.org
-    listen   8000 default;
-    server_name browserid.org www.browserid.org;
-    # Set STS Header
-    add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
-
-    # redirect
-    # http://wiki.nginx.org/IfIsEvil
-    if ($request_method ~ GET|HEAD ) {
-        rewrite        ^ https://login.persona.org$request_uri? permanent;
+    
+    # verifier
+    location = /verify {
+        proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
+        proxy_pass http://127.0.0.1:62800;
+    }
+    location = /verify/__heartbeat__ {
+        rewrite /verify/__heartbeat__ /__heartbeat__ break;
+        proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
+        proxy_pass http://127.0.0.1:62800;
     }
 
-    if ($request_method !~ GET|HEAD ) {
-        return 400 "{\"error\": \"Please use HTTPS rather than HTTP\"}";
-    }
-}
-
-server {
-    # HTTP diresworb.org www.diresworb.org
-    listen   8000 default;
-    server_name browserid.org www.diresworb.org;
-    # Set STS Header
-    add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
-
-    # redirect
-    # http://wiki.nginx.org/IfIsEvil
-    if ($request_method ~ GET|HEAD ) {
-        rewrite        ^ https://login.anosrep.org$request_uri? permanent;
+    # router
+    location / {
+        rewrite ^/production/dialog.js$ https://$host/production/en_US/dialog.js redirect;
+    
+        proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
+        proxy_pass http://127.0.0.1:63300;
+    
+        gzip on;
+        gzip_disable "MSIE [1-6]\.(?!.*SV1)";
+        gzip_proxied any;
+        gzip_types application/javascript text/css;
     }
 
-    if ($request_method !~ GET|HEAD ) {
-        return 400 "{\"error\": \"Please use HTTPS rather than HTTP\"}";
-    }
-}
 
-server {
-    # HTTP persona.org www.persona.org
-    listen   8000 default;
-    server_name persona.org www.persona.org;
-    # Set STS Header
-    add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
-
-    # redirect
-    # http://wiki.nginx.org/IfIsEvil
-    if ($request_method ~ GET|HEAD ) {
-        rewrite        ^ https://login.persona.org/ permanent;
-    }
-
-    if ($request_method !~ GET|HEAD ) {
-        return 400 "{\"error\": \"Please use HTTPS rather than HTTP\"}";
-    }
-}
-
-server {
-    # HTTP anosrep.org www.anosrep.org
-    listen   8000 default;
-    server_name anosrep.org www.anosrep.org;
-    # Set STS Header
-    add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
-
-    # redirect
-    # http://wiki.nginx.org/IfIsEvil
-    if ($request_method ~ GET|HEAD ) {
-        rewrite        ^ https://login.anosrep.org/ permanent;
-    }
-
-    if ($request_method !~ GET|HEAD ) {
-        return 400 "{\"error\": \"Please use HTTPS rather than HTTP\"}";
-    }
 }
