--- a/chef/cookbooks/persona-dbwrite/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-dbwrite/templates/default/opt/browserid/config/production.json.erb
@@ -34,6 +34,7 @@
   "keysigner_url": "<%= node[:persona][:keysigner_url] %>",
   "dbwriter_url": "<%= node[:persona][:dbwriter_url] %>",
   "browserid_url": "http://127.0.0.1:62700",
+  "proxy_idps": <%= JSON.generate(node[:persona][:proxy_idps]) %>,
   <% if node[:proxy][:host] %>
   "http_proxy": {
     "host": "<%= node[:proxy][:host] %>",
