--- a/chef/cookbooks/persona-webhead/templates/default/etc/nginx/conf.d/idweb.conf.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/etc/nginx/conf.d/idweb.conf.erb
@@ -32,6 +32,10 @@ server {
         proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
         proxy_pass http://127.0.0.1:62700;
     }
+
+    if ($request_method !~ GET|HEAD ) {
+        return 400 "{\"error\": \"This is not a valid URL to POST to\"}";
+    }
     
     # router
     location / {
