--- a/chef/cookbooks/persona-webhead/templates/default/etc/nginx/conf.d/redirect.conf.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/etc/nginx/conf.d/redirect.conf.erb
@@ -48,6 +48,7 @@ server {
     rewrite        ^/include\.js$ https://<%= @site_name %>/include.js permanent;
     rewrite        ^/include\.orig\.js$ https://<%= @site_name %>/include.orig.js permanent;
     rewrite        ^/provisioning_api\.js$ https://<%= @site_name %>/provisioning_api.js permanent;
+    rewirte        ^/authentication_api\.js$ https://<%= @site_name %>/authentication_api.js permanent;
 }
 
 server {
@@ -141,6 +142,7 @@ server {
         rewrite        ^/include\.js$ https://<%= @site_name %>/include.js permanent;
         rewrite        ^/include\.orig\.js$ https://<%= @site_name %>/include.orig.js permanent;
         rewrite        ^/provisioning_api\.js$ https://<%= @site_name %>/provisioning_api.js permanent;
+        rewirte        ^/authentication_api\.js$ https://<%= @site_name %>/authentication_api.js permanent;
     }
 
     location /verify/code_update {
@@ -158,6 +160,8 @@ server {
         proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
         proxy_pass http://127.0.0.1:62800;
     }  
+
+    return 400 "{\"error\": \"This is not a valid URL to POST to\"}";
 }
 
 server {
@@ -174,6 +178,7 @@ server {
         rewrite        ^/include\.js$ https://<%= @site_name %>/include.js permanent;
         rewrite        ^/include\.orig\.js$ https://<%= @site_name %>/include.orig.js permanent;
         rewrite        ^/provisioning_api\.js$ https://<%= @site_name %>/provisioning_api.js permanent;
+        rewirte        ^/authentication_api\.js$ https://<%= @site_name %>/authentication_api.js permanent;
     }
 
     location /verify/code_update {
