--- a/chef/cookbooks/persona-webhead/templates/default/etc/nginx/conf.d/idweb.conf.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/etc/nginx/conf.d/idweb.conf.erb
@@ -2,11 +2,11 @@ server {
     listen       80 default;
     server_name <%= @site_name %>;
     # do not expose to public
-    location /code_update {
+    location = /code_update {
         allow 127.0.0.0/8;
         deny all;
     }
-    location /verify/code_update {
+    location = /verify/code_update {
         allow 127.0.0.0/8;
         deny all;
     }
@@ -33,10 +33,6 @@ server {
         proxy_pass http://127.0.0.1:62700;
     }
 
-    if ($request_method !~ GET|HEAD ) {
-        return 400 "{\"error\": \"This is not a valid URL to POST to\"}";
-    }
-    
     # router
     location / {
         rewrite ^/production/dialog.js$ https://$host/production/en_US/dialog.js redirect;
@@ -48,6 +44,10 @@ server {
         gzip_disable "MSIE [1-6]\.(?!.*SV1)";
         gzip_proxied any;
         gzip_types application/javascript text/css;
+
+        if ($request_method !~ GET|HEAD) {
+            return 400 "{\"error\": \"This is not a valid URL to POST to\"}";
+        }
     }
 
     # The ELB provides :
