--- a/chef/cookbooks/persona-webhead/templates/default/etc/nginx/conf.d/idweb.conf.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/etc/nginx/conf.d/idweb.conf.erb
@@ -33,10 +33,7 @@ server {
         proxy_pass http://127.0.0.1:62700;
     }
 
-    # router
-    location / {
-        rewrite ^/production/dialog.js$ https://$host/production/en_US/dialog.js redirect;
-    
+    location = / {
         proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
         proxy_pass http://127.0.0.1:63300;
     
@@ -48,6 +45,19 @@ server {
         if ($request_method !~ GET|HEAD) {
             return 400 "{\"error\": \"This is not a valid URL to POST to\"}";
         }
+    }
+
+    # router
+    location / {
+        rewrite ^/production/dialog.js$ https://$host/production/en_US/dialog.js redirect;
+    
+        proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
+        proxy_pass http://127.0.0.1:63300;
+    
+        gzip on;
+        gzip_disable "MSIE [1-6]\.(?!.*SV1)";
+        gzip_proxied any;
+        gzip_types application/javascript text/css;
     }
 
     # The ELB provides :
