changing userdata format from bash to json. changing load balancer dns name injection from python template to native object rendered to json, adding in stack information to user data

--- a/chef/cookbooks/bigtent/templates/default/opt/bigtent/config/production.json.erb
+++ b/chef/cookbooks/bigtent/templates/default/opt/bigtent/config/production.json.erb
@@ -20,9 +20,9 @@
   },
   "pub_key_ttl": 120,
   "pub_key_path": "/var/browserid/certifier/key.publickey",
-<% if node[:proxy][:host] %>
+<% @proxy_host %>
   "http_proxy": {
-    "host": "<%= node[:proxy][:host] %>",
+    "host": "<%= @proxy_host %>",
     "port": <%= node[:proxy][:port] %>
   },
 <% end %>
