--- a/chef/cookbooks/persona-dbwrite/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-dbwrite/templates/default/opt/browserid/config/production.json.erb
@@ -31,14 +31,14 @@
 
   "static_url": "http://127.0.0.1:63400",
   "verifier_url": "<%= node[:persona][:verifier_url] %>",
-  "keysigner_url": "<%= node[:persona][:keysigner_url] %>",
-  "dbwriter_url": "<%= node[:persona][:dbwriter_url] %>",
+  "keysigner_url": "http://<%= @keysign_host %>",
+  "dbwriter_url": "http://<%= @dbwrite_host %>",
   "browserid_url": "http://127.0.0.1:62700",
   "proxy_idps": <%= JSON.generate(node[:persona][:proxy_idps]) %>,
-  <% if node[:proxy][:host] %>
+  <% if @proxy_host %>
   "http_proxy": {
-    "host": "<%= node[:proxy][:host] %>",
-    "port": 8888
+    "host": "<%= @proxy_host %>",
+    "port": <%= node[:proxy][:port] %>
   },
   <% end %>
   "database": {
