--- a/chef/cookbooks/persona-keysign/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-keysign/templates/default/opt/browserid/config/production.json.erb
@@ -29,17 +29,10 @@
   "dbwriter": { "bind_to": { "port": 62700 } },
   "static": { "bind_to": { "port": 63400 } },
 
-  <% if node[:proxy][:host] %>
-  "http_proxy": {
-    "host": "<%= node[:proxy][:host] %>",
-    "port": 8888
-  }
-  <% end %>
-
   "static_url": "http://127.0.0.1:63400",
   "verifier_url": "<%= node[:persona][:verifier_url] %>",
-  "keysigner_url": "<%= node[:persona][:keysigner_url] %>",
-  "dbwriter_url": "<%= node[:persona][:dbwriter_url] %>",
+  "keysigner_url": "http://<%= @keysign_host %>",
+  "dbwriter_url": "http://<%= @dbwrite_host %>",
   "browserid_url": "http://127.0.0.1:62700"
 }
 
