--- a/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
@@ -31,17 +31,17 @@
 
   "static_url": "http://127.0.0.1:63400",
   "verifier_url": "<%= node[:persona][:verifier_url] %>",
-  "keysigner_url": "<%= node[:persona][:keysigner_url] %>",
-  "dbwriter_url": "<%= node[:persona][:dbwriter_url] %>",
+  "keysigner_url": "http://<%= @keysign_host %>",
+  "dbwriter_url": "http://<%= @dbwrite_host %>",
   "browserid_url": "http://127.0.0.1:62700",
   "proxy_idps": <%= JSON.generate(node[:persona][:proxy_idps]) %>,
   "kpi_backend_sample_rate": <%= node[:persona][:webhead][:kpi_backend_sample_rate] %>,
   "kpi_backend_db_url": "<%= node[:persona][:webhead][:kpi_backend_db_url] %>",
-  <% if node[:proxy][:host] %>
+  <% if @proxy_host %>
   "http_proxy": {
-    "host": "<%= node[:proxy][:host] %>",
-    "port": 8888
-  },
+    "host": "<%= @proxy_host %>",
+    "port": <%= node[:proxy][:port] %>
+  }
   <% end %>
   "database": {
     "host": "<%= node[:persona][:webhead][:database][:host] %>",
