--- a/chef/cookbooks/persona-dbwrite/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-dbwrite/templates/default/opt/browserid/config/production.json.erb
@@ -31,17 +31,16 @@
 
   "static_url": "http://127.0.0.1:63400",
   "verifier_url": "<%= node[:persona][:verifier_url] %>",
-  "keysigner_url": "http://<%= @keysign_host %>",
-  "dbwriter_url": "http://<%= @dbwrite_host %>",
+  "keysigner_url": "http://<%= node[:stack][:load_balancers].include?('keysign') ? node[:stack][:load_balancers][:keysign][:dns_name] : node[:persona][:db_keysign_host] %>",
+  "dbwriter_url": "http://<%= node[:stack][:load_balancers].include?('dbwrite') ? node[:stack][:load_balancers][:dbwrite][:dns_name] : node[:persona][:db_dbwrite_host] %>",
   "browserid_url": "http://127.0.0.1:62700",
   "proxy_idps": <%= JSON.generate(node[:persona][:proxy_idps]) %>,
-  <% if @proxy_host %>
+<% if node[:stack][:load_balancers].include?('proxy') or node[:proxy][:host] %>
   "http_proxy": {
-    "host": "<%= @proxy_host %>",
+    "host": "<%= node[:stack][:load_balancers].include?('proxy') ? node[:stack][:load_balancers][:proxy][:dns_name] : node[:proxy][:host] %>",
     "port": <%= node[:proxy][:port] %>
   },
-  <% end %>
-  "database": {
+<% end %>  "database": {
     "host": "<%= node[:persona][:dbwrite][:database][:host] %>",
     "user": "<%= node[:persona][:dbwrite][:database][:user] %>",
     "password": "<%= node[:persona][:dbwrite][:database][:password] %>",
