--- a/chef/cookbooks/persona-keysign/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-keysign/templates/default/opt/browserid/config/production.json.erb
@@ -31,7 +31,7 @@
 
   "static_url": "http://127.0.0.1:63400",
   "verifier_url": "<%= node[:persona][:verifier_url] %>",
-  "keysigner_url": "http://<%= node[:stack][:load_balancers].include?('keysign') ? node[:stack][:load_balancers][:keysign][:dns_name] : node[:persona][:db_keysign_host] %>",
-  "dbwriter_url": "http://<%= node[:stack][:load_balancers].include?('dbwrite') ? node[:stack][:load_balancers][:dbwrite][:dns_name] : node[:persona][:db_dbwrite_host] %>",
+  "keysigner_url": "http://<%= node[:stack][:load_balancers].include?('keysign') ? node[:stack][:load_balancers][:keysign][:dns_name] : node[:persona][:keysign_host] %>",
+  "dbwriter_url": "http://<%= node[:stack][:load_balancers].include?('dbwrite') ? node[:stack][:load_balancers][:dbwrite][:dns_name] : node[:persona][:dbwrite_host] %>",
   "browserid_url": "http://127.0.0.1:62700"
 }
