--- a/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
@@ -21,6 +21,7 @@
   "express_log_format": "default",
   "email_to_console": false,
   "var_path": "/var/browserid",
+  "forcible_issuers": [ "<%= node[:persona][:site_name] %>" ],
 
   "keysigner": { "bind_to": { "port": 62700 } },
   "browserid": { "bind_to": { "port": 62700 } },
