Fixing redirect requested here : https://github.com/mozilla/identity-ops/issues/31#issuecomment-18041945

--- a/chef/cookbooks/persona-webhead/templates/default/etc/nginx/conf.d/redirect.conf.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/etc/nginx/conf.d/redirect.conf.erb
@@ -29,7 +29,8 @@ server {
     if ($request_method !~ GET|HEAD ) {
         return 400 "{\"error\": \"Please use HTTPS rather than HTTP\"}";
     }
-    rewrite        ^ https://<%= @site_name %>/ permanent;
+    rewrite        ^/$ https://<%= @site_name %>/ permanent;
+
 }
 
 server {
