--- a/chef/cookbooks/persona-webhead/templates/default/etc/nginx/conf.d/redirect.conf.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/etc/nginx/conf.d/redirect.conf.erb
@@ -83,9 +83,24 @@ server {
 }
 
 server {
-    # HTTP <%= @base_site_name %> www.<%= @base_site_name %>
+    # HTTP www.<%= @base_site_name %>
     listen   8000;
-    server_name <%= @base_site_name %> www.<%= @base_site_name %>;
+    server_name www.<%= @base_site_name %>;
+    # Set STS Header
+    add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
+
+    # redirect
+    # http://wiki.nginx.org/IfIsEvil
+    if ($request_method !~ GET|HEAD ) {
+        return 400 "{\"error\": \"Please use HTTPS rather than HTTP\"}";
+    }
+    rewrite        ^/$ https://<%= @base_site_name %>/ permanent;
+}
+
+server {
+    # HTTP <%= @base_site_name %>
+    listen   8000;
+    server_name <%= @base_site_name %>;
     # Set STS Header
     add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
 
@@ -130,9 +145,9 @@ server {
 }
 
 server {
-    # HTTPS <%= @base_site_name %> www.<%= @base_site_name %> verifier.<%= @site_name %>
+    # HTTPS <%= @base_site_name %> verifier.<%= @site_name %>
     listen   80;
-    server_name <%= @base_site_name %> www.<%= @base_site_name %> verifier.<%= @site_name %>;
+    server_name <%= @base_site_name %> verifier.<%= @site_name %>;
     # Set STS Header
     add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
 
@@ -144,6 +159,42 @@ server {
         rewrite        ^/include\.orig\.js$ https://<%= @site_name %>/include.orig.js permanent;
         rewrite        ^/provisioning_api\.js$ https://<%= @site_name %>/provisioning_api.js permanent;
         rewrite        ^/authentication_api\.js$ https://<%= @site_name %>/authentication_api.js permanent;
+        return 404;
+    }
+
+    location = /verify/code_update {
+        allow 127.0.0.0/8;
+        deny all;
+    }
+    
+    # verifier
+    location = /verify {
+        proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
+        proxy_pass http://127.0.0.1:62800;
+    }
+    location = /verify/__heartbeat__ {
+        rewrite /verify/__heartbeat__ /__heartbeat__ break;
+        proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
+        proxy_pass http://127.0.0.1:62800;
+    }  
+    location  / {
+        if ($request_method !~ GET|HEAD ) {
+            return 400 "{\"error\": \"This is not a valid URL to POST to\"}";
+        }
+    }
+}
+
+server {
+    # HTTPS www.<%= @base_site_name %>
+    listen   80;
+    server_name www.<%= @base_site_name %>;
+    # Set STS Header
+    add_header Strict-Transport-Security "max-age=10886400; includeSubdomains";
+
+    # redirect
+    # http://wiki.nginx.org/IfIsEvil
+    if ($request_method ~ GET|HEAD ) {
+        rewrite        ^/$ https://<%= @base_site_name %>/ permanent;
         return 404;
     }
 
