Setting the rootzone apache reverse proxy to work with the round robin DNS of ELBs : https://github.com/mozilla/browserid/issues/3440

--- a/chef/cookbooks/persona-rootzone/templates/default/etc/httpd/conf.d/rootzone.conf.erb
+++ b/chef/cookbooks/persona-rootzone/templates/default/etc/httpd/conf.d/rootzone.conf.erb
@@ -56,8 +56,7 @@ SSLCryptoDevice builtin
         Allow from all
     </Proxy>
 
-    ProxyPass / <%= x[:url] %>
-    ProxyPassReverse / <%= x[:url] %>
+    ProxyPass / <%= x[:url] %> disablereuse=On
     <Location />
         Order allow,deny
         Allow from all
