Adding new forcible issuer for firefoxos

--- a/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
@@ -21,7 +21,8 @@
   "express_log_format": "default",
   "email_to_console": false,
   "var_path": "/var/browserid",
-  "forcible_issuers": [ "<%= node[:persona][:site_name] %>" ],
+  "forcible_issuers": [ "login.<%= @zone %>",
+                        "firefoxos.<%= @zone %>" ],
 
   "keysigner": { "bind_to": { "port": 62700 } },
   "browserid": { "bind_to": { "port": 62700 } },
