update graphite to graph all stacks instead of the current one

--- a/chef/cookbooks/persona-graphite/templates/default/opt/cloudwatch2graphite/conf/names.json.erb
+++ b/chef/cookbooks/persona-graphite/templates/default/opt/cloudwatch2graphite/conf/names.json.erb
@@ -1,6 +1,8 @@
 [
 <% names = node[:stack][:load_balancers].keys %>
 <% names.each_index do |x| %>
-  {"aws_name": "<%= node[:stack][:load_balancers][names[x]][:name] %>", "graphite_name": "<%= names[x] %>"}<%= x >= names.length - 1 ? "" : "," %>
+<%   stack = names[x].split('-')[-1] %>
+  {"aws_name": "<%= node[:stack][:load_balancers][names[x]][:name] %>", 
+   "graphite_name": "<%= stack + "." + names[x] %>"}<%= x >= names.length - 1 ? "" : "," %>
 <% end %>
 ]
